Fix switch button not showing in popups #60

--- a/theme/colors/dark.css
+++ b/theme/colors/dark.css
@@ -98,6 +98,17 @@
 		--sweet-inactive-tabbar-tab-active-border-bottom-color: #C50ED2;
 		--sweet-inactive-tabbar-tab-active-color: rgb(141, 144, 145);  
 
+		/* Switch */
+		--sweet-switch-background: #1E2233;
+		--sweet-switch-border-color: #0C0E15;
+		--sweet-switch-slider-background: #151723;
+		--sweet-switch-slider-border-color: #0C0E15;
+		--sweet-switch-slider-box-shadow: inset 0 1px rgba(255, 255, 255, 0.02), 0 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.07);	
+		--sweet-switch-active-background: linear-gradient(to right, #f7005a, #fadd00);;
+		--sweet-switch-active-border-color: #0C0E15;
+		--sweet-switch-active-slider-border-color: #363B59;
+		--sweet-switch-active-slider-background: #ffffff;
+
 		--sweet-start-gradient-color: #5800E2;
 		--sweet-end-gradient-color: #FF00E6;
 		--sweet-start-gradient-color-rgb: 88,0,226;
